@@ -508,6 +508,28 @@
                 <p>The <m>n\times n</m> square matrix <m>A</m> is <term>lower triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\lt j</m>.</p>
             </statement>
         </definition>
+        <p>So an upper triangular matrix has all its entries <q>below</q> the diagonal equal to zero, and a lower triangular matrix has all its entries <q>above</q> the diagonal equal to zero.</p>
+        <example xml:id="example-ULTM" acro="ULTM">
+            <title>Upper and lower triangular matrices</title>
+            <statement>
+                <!-- U nonsingular next, L singular next -->
+                <p>The matrix <m>U</m> is upper triangular, while <m>L</m> is lower triangular.<md>
+                    <mrow>
+                    U &amp;=\begin{bmatrix}
+                    5 &amp; -3 &amp; 7 \\
+                    0 &amp;  6 &amp; 0 \\
+                    0 &amp;  0 &amp; 3
+                    \end{bmatrix}
+                    &amp;
+                    L &amp;=\begin{bmatrix}
+                     5 &amp;  0 &amp; 0 \\
+                     2 &amp;  0 &amp; 0 \\
+                    -8 &amp; -2 &amp; 6
+                    \end{bmatrix}
+                    </mrow>
+                </md></p>
+            </statement>
+        </example>
     </subsection>
     <subsection xml:id="subsection-MO-MCC" acro="MCC">
         <title>Matrices and Complex Conjugation</title>
