@@ -31,7 +31,8 @@ only emply characteristic polynomial for algebraic multiplicities.
 algebraic multiplicities.
 
 *  Move definitions and results for triangular matrices.
-Definitions UTM and LTM move from Section OD to Section MO.
+Definitions UTM and LTM move from Section OD to Section MO,
+with new Example ULTM.
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -43,6 +44,7 @@ New: Exercise S.M40, union of subspaces is not a subspace
 New: Theorem SID, dimensions of intersection and sum of subspaces
 New: Exercise PD.T60, alternate solution using Theorem SID
 New: Theorem ESM, formalizing an eigenvalue discussion
+New: Example ULTM, examples of triangular matrices
 New: Example UE, unknown eigenvalues
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
